--- a/package.json
+++ b/package.json
@@ -11,16 +11,23 @@
     "cross-env": "^5.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
+    "graphql": "^14.6.0",
     "lodash": "^4.17.15",
     "next": "latest",
+    "pg": "^7.18.2",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react-dom": "^16.8.4",
+    "reflect-metadata": "^0.1.13",
+    "type-graphql": "^0.17.6",
+    "typeorm": "^0.2.24"
   },
   "devDependencies": {
     "@types/express": "^4.17.3",
+    "@types/graphql": "^14.5.0",
     "@types/hapi__joi": "^16.0.12",
     "@types/lodash": "^4.14.149",
-    "@types/node": "^12.0.12",
+    "@types/node": "^12.12.29",
     "@types/react": "^16.8.17",
     "@types/react-dom": "16.8.4",
     "nodemon": "^1.19.0",
