--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,11 +1,12 @@
 {
-  "extends": "./tsconfig.json",
+  // "extends": "./tsconfig.json",
   "compilerOptions": {
     "module": "commonjs",
     "outDir": "dist",
-    "target": "es2017",
-    "isolatedModules": false,
-    "noEmit": false
+    "target": "es2016",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "lib": ["es2016", "esnext.asynciterable"]
   },
   "include": ["server/**/*.ts"]
 }
