--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,12 +1,10 @@
 {
-  // "extends": "./tsconfig.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
     "module": "commonjs",
     "outDir": "dist",
-    "target": "es2016",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "lib": ["es2016", "esnext.asynciterable"]
+    "lib": ["es2016", "esnext.asynciterable"],
+    "allowSyntheticDefaultImports": true
   },
   "include": ["server/**/*.ts"]
 }
