--- a/tsconfig.client.json
+++ b/tsconfig.client.json
@@ -4,8 +4,10 @@
     "target": "esnext",
     "module": "esnext",
     "jsx": "preserve",
-    "lib": ["dom", "es2016"],
-    "baseUrl": "."
+    "lib": ["dom", "es2017"],
+    "strict": true,
+    "noEmit": true,
+    "isolatedModules": true
   },
   "exclude": ["dist", ".next", "out", "next.config.js"],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
