--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,10 +1,12 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "target": "es2016",
     "module": "commonjs",
     "outDir": "dist",
-    "lib": ["es2016", "esnext.asynciterable"],
-    "allowSyntheticDefaultImports": true
+    "isolatedModules": false,
+    "noEmit": false,
+    "lib": ["es2016", "esnext.asynciterable"]
   },
   "include": ["server/**/*.ts"]
 }
