--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -6,7 +6,8 @@
     "outDir": "dist",
     "isolatedModules": false,
     "noEmit": false,
-    "lib": ["es2016", "esnext.asynciterable"]
+    "strictPropertyInitialization": false,
+    "lib": ["dom", "es2016", "esnext.asynciterable"]
   },
   "include": ["server/**/*.ts"]
 }
