--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "express-graphql": "^0.9.0",
     "graphql": "^14.6.0",
     "lodash": "^4.17.15",
+    "morgan": "^1.9.1",
     "next": "latest",
     "pg": "^7.18.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^0.17.6",
-    "typeorm": "^0.2.24"
+    "typeorm": "^0.2.24",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.3",
