--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,11 @@ services:
       dockerfile: Dockerfile
     environment:
       - DATABASE_URL=postgres://postgres:test@db.local:5432/auth-proxy
+      - DB_PORT=5432
+      - DB_USERNAME=postgres
+      - DB_PASSWORD=test
+      - DB_NAME=auth-proxy
+      - DB_HOST=postgres
     volumes:
       - ./server:/app
       - /app/node_modules
