--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "express-rate-limit": "^5.1.1",
     "graphql": "^15.0.0",
     "graphql-tools": "^5.0.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.0.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -49,6 +50,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.3",
     "@types/jest": "25.1.4",
+    "@types/jsonwebtoken": "^8.3.9",
     "@types/node": "^13.9.1",
     "@types/pg": "^7.14.3",
     "@types/supertest": "^2.0.8",
