--- a/server/.env.example
+++ b/server/.env.example
@@ -6,3 +6,5 @@ DB_USERNAME=postgres
 DB_PASSWORD=pass
 DB_PORT=5432
 AUTH_SECRET=feges
+PUBLIC_KEY_SIGNATURE=9e2nfiqonf
+SECRET_KEY_SIGNATURE=edldfed3
