--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,7 +8,10 @@
     "target": "es2017",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./",
+    "baseUrl": ".",
+    "paths": {
+      "src": ["./src"]
+    },
     "incremental": true
   },
   "exclude": ["node_modules", "dist"]
